--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -70,6 +70,7 @@
 
 #content .note .iconsDiv .trash,
 #content .note .iconsDiv .pallete {
+  z-index: 5;
   color: black;
   transition: 0.1s;
 }
@@ -80,4 +81,63 @@
 #content .note .iconsDiv .pallete:hover {
   color: blue;
   transform: scale(1.3, 1.3);
+}
+.colorDiv {
+  position: absolute;
+  z-index: 10;
+  background: #fff;
+  left: 0;
+  border-radius: 5px;
+  border: 1px solid black;
+  display: none;
+  justify-content: space-between;
+  gap: 0.5em;
+  padding: 0.5em;
+}
+
+.pallete:hover .colorDiv {
+  display: flex;
+}
+
+#content .note .iconsDiv .pallete .colorDiv .color-circle {
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid #5f6368;
+}
+.color-circle:hover {
+  box-shadow: 1px 2px 6px rgb(0 0 0 / 40%);
+}
+[color-name="purple"] {
+  background-color: #d7aefb;
+}
+[color-name="orange"] {
+  background-color: #fbbc04;
+}
+[color-name="teal"] {
+  background-color: #a7ffeb;
+}
+[color-name="green"] {
+  background-color: #46c221;
+}
+.white {
+  background-color: white;
+  color: #5f6368;
+}
+.purple {
+  background-color: #d7aefb;
+  color: black;
+}
+.orange {
+  background-color: #fbbc04;
+  color: black;
+}
+.teal {
+  background-color: #a7ffeb;
+  color: black;
+}
+.green {
+  background-color: #46c221;
+  color: black;
 }
