--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -44,7 +44,7 @@ form input.mainInputs {
   height: 25px;
   display: none;
 }
-form textarea#inputNote {
+textarea#inputNote {
   font-weight: 700;
   font-size: 15px;
   letter-spacing: 0.5px;
@@ -54,8 +54,8 @@ form textarea#inputNote {
   padding-bottom: 2px;
   height: 25px;
 }
-.addBottomLine {
-  border-bottom: 1px solid gray !important;
+form textarea#inputNote.addBottomLine {
+  border-bottom: 1px solid gray;
 }
 form #titleInput {
   font-size: 20px;
@@ -96,4 +96,26 @@ form #labelsInput {
   margin-top: 100px;
   color: #80868b;
   font-size: 1.5rem;
+}
+.searchDiv {
+  width: 150px;
+  display: none;
+  justify-content: center;
+  border-bottom: 2px solid #888;
+  gap: 5px;
+  font-size: 16px;
+  margin: 2rem auto;
+  cursor: pointer;
+}
+.displaySearch {
+  display: flex;
+}
+.focusSearch {
+  border-bottom: 3px solid black;
+}
+.searchInput {
+  width: 100px;
+  letter-spacing: 1px;
+  border: 0;
+  outline: 0;
 }
