mobile-responsive-finished

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -3,7 +3,8 @@
   top: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
+  z-index: 20;
   /* background-color: rgba(0, 0, 0, 0.4); */
 }
 .displayBlock {
@@ -69,4 +70,10 @@
   top: 10px;
   font-size: 25px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  [data="modal"] [data="editDiv"] {
+    width: 90%;
+  }
 }
