--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -81,6 +81,7 @@
 #content .note .iconsDiv .pallete:hover {
   color: blue;
   transform: scale(1.3, 1.3);
+  z-index: 15;
 }
 .colorDiv {
   position: absolute;
