--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -118,4 +119,15 @@ form #labelsInput {
   letter-spacing: 1px;
   border: 0;
   outline: 0;
+}
+@media screen and (max-width: 600px) {
+  form {
+    width: 80%;
+  }
+  .note .iconsDiv {
+    display: flex;
+  }
+  .iconsDiv .pallete .colorDiv {
+    flex-direction: column;
+  }
 }
